--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="destination" id="paris">
-                <h2>Parissssssss</h2>
+                <h2>Parisssssss</h2>
             </div>
         </div>
     </div>
